--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
-<footer class="page-footer">
+<footer class="page-footer full-width">
 	<div class="container">
 		<div class="row footer-row">
 			<div class="col s12 m6 l6 footer-column">
 		  		<p class="grey-text text-lighten-4">RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto.</p>
 			</div>
-			<div class="col s12 m3 l3 masthead-link footer-column">
+			<div class="col s12 m3 l3 footer-column" id="masthead-link">
 				<p><a href="{{ site.baseurl }}/masthead.html" class="white-text"><b>Masthead</b></a><br/>
 				<a href="mailto:kawin@cs.toronto.edu" class="white-text"><b>Contact</b></a></p>
 			</div>
