--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -113,6 +113,7 @@ figcaption {
 	    	.toc-content {
 	    		display: flex;
 	    		align-items: stretch;
+	    		width: 100%;
 	    		.toc-chapter-content {
 	    			height: inherit;
 	    		}
@@ -182,14 +183,10 @@ figcaption {
 	// height: $toc-height;
 	// }
 
-	.col.m30, .col.l30 {
-		width: 30%;
+	.toc-container {
+		margin-top: 20px;
+		margin-bottom: 20px;
 	}
-
-	.col.m70, .col.m70 {
-		width: 70%;
-	}
-
 	h1 {font-size: 2.92rem;
 		margin-top: 4.5rem !important;}
 
