--- a/css/style.css
+++ b/css/style.css
@@ -5316,6 +5316,7 @@ nav {
     white-space: nowrap; }
     nav .brand-logo.center {
       left: 50%;
+      top: 0%;
       -webkit-transform: translateX(-50%);
       -moz-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
@@ -8422,7 +8423,8 @@ figcaption {
       align-items: stretch; }
       .toc-container #toc-content-wrapper .toc-content {
         display: flex;
-        align-items: stretch; }
+        align-items: stretch;
+        width: 100%; }
         .toc-container #toc-content-wrapper .toc-content .toc-chapter-content {
           height: inherit; }
 
@@ -8464,11 +8466,9 @@ figcaption {
     height: 570px;
     width: 896px; } }
 @media only screen and (min-width: 601px) {
-  .col.m30, .col.l30 {
-    width: 30%; }
-
-  .col.m70, .col.m70 {
-    width: 70%; }
+  .toc-container {
+    margin-top: 20px;
+    margin-bottom: 20px; }
 
   h1 {
     font-size: 2.92rem;
