--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -5,7 +5,7 @@
     <div class="col m3 l3 hide-on-small-and-down">
       <div class="marginless-collection collection">
 
-        <a href="#letter-from-the-editor" class="chapter-active waves-effect waves-light collection-item">
+        <a href="#letter-from-the-editor" class="chapter-active waves-light collection-item">
           <span class="toc-title">Letter From the Editor</span>
         </a>
 
@@ -17,7 +17,7 @@
             {% assign i = i | minus: 1 %}
         {% else %}
 
-        <a href="#{{ chapter[0] | replace: ' ', '-'}}" class="waves-effect waves-light collection-item">
+        <a href="#{{ chapter[0] | replace: ' ', '-'}}" class="waves-light collection-item">
           <span class="toc-title">{{ chapter[0] | capitalize }}</span>
         </a>
 
@@ -27,7 +27,7 @@
 
         {% endfor %}
 
-        <a href="#profiles-and-interviews" class="waves-effect waves-light collection-item">
+        <a href="#profiles-and-interviews" class="waves-light collection-item">
           <span class="toc-title">Profiles/Interviews</span>
         </a>
 
