--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <div class="navbar-fixed">
 <nav class="header-background" role="navigation">
   <div class="nav-wrapper valign-wrapper">
-    <a id="logo-container" href="{{ site.baseurl }}/#{{ page.category | replace: ' ', '-'}}" class="brand-logo">{{site.title}}</a>
+    <a id="logo-container" href="{{ site.baseurl }}/#table-of-contents" class="brand-logo">{{site.title}}</a>
     <ul class="left">
       <li><a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium white-text cyan-hover">keyboard_arrow_left</i></a></li>
     </ul>
