made back button reward to original category

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,16 @@
 <nav class="header-background" role="navigation">
   <div class="nav-wrapper valign-wrapper">
     <a id="logo-container" href="{{ site.baseurl }}/#table-of-contents" class="brand-logo">{{site.title}}</a>
-    <ul class="left">
-      <li><a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium white-text cyan-hover">keyboard_arrow_left</i></a></li>
-    </ul>
+    <div class="left" onclick="goBack()">
+      <i class="material-icons medium white-text">keyboard_arrow_left</i>
+    </div>
   </div>
 </nav>
 </div>
 {% endif %}
+
+<script>
+function goBack() {
+	window.history.back();
+}
+</script>
