--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -459,15 +459,20 @@ figcaption {
 .navbar-fixed {
 	.header-background {
 		.nav-wrapper {
-			ul {
+			div {
 				height: 100%;
-				li {
-					@extend .valign-wrapper;
-					height: 100%;
-					a {
-						@extend .valign;
-					}
-				}
+				width: 5%;
+				text-align: center;
+				-webkit-transition: background 0.15s linear;
+        			-moz-transition: background 0.15s linear;
+        			-ms-transition: background 0.15s linear;
+        			-o-transition: background 0.15s linear;
+        			transition: background 0.15s linear;
+				transition-property: background-color; 
+			}
+
+			div:hover {
+				background-color: $primary-color;
 			}
 
 			.brand-logo {
