replaced javascript hack for back button with legitimate approach

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,16 +4,11 @@
 <nav class="header-background" role="navigation">
   <div class="nav-wrapper valign-wrapper">
     <a id="logo-container" href="{{ site.baseurl }}/#table-of-contents" class="brand-logo">{{site.title}}</a>
-    <div class="left" onclick="goBack()">
-      <i class="material-icons medium white-text">keyboard_arrow_left</i>
+    <div class="left">
+      <a href="{{ site.baseurl }}/#{{ page.category | replace: ' ', '-'}}"><i class="material-icons medium white-text">keyboard_arrow_left</i></a>
     </div>
   </div>
 </nav>
 </div>
 {% endif %}
 
-<script>
-function goBack() {
-	window.history.back();
-}
-</script>
