--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -5,7 +5,7 @@
     <div class="col m3 l3 hide-on-small-and-down">
       <div class="marginless-collection collection">
 
-        <a href="#letter-from-the-editor" class="chapter-active waves-light collection-item">
+        <a href="#letter-from-the-editor" class="waves-light collection-item">
           <span class="toc-title">Letter From the Editor</span>
         </a>
 
@@ -27,7 +27,7 @@
 
         {% endfor %}
 
-        <a href="#profiles-and-interviews" class="waves-light collection-item">
+        <a id="#profiles-and-interviews" href="#profiles-and-interviews" class="waves-light collection-item">
           <span class="toc-title">Profiles/Interviews</span>
         </a>
 
