fixed bug that prevented favicon from showing on Firefox

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=YES" />
   <meta name="description" content="RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto."/>
-  <meta property="og:image" content="/RUCS.ico" /> 
-  <link rel="icon" type="image/png" href="/RUCS.ico">
- 
+  <link rel="icon" type="image/x-icon" href="/RUCS.ico">
+  <meta property="og:image" content="/RUCS.ico" />
   <meta name="theme-color" content="#0097A7"> 
   <title>RUCS</title>
 
