--- a/css/style.css
+++ b/css/style.css
@@ -8679,7 +8679,7 @@ figcaption {
   text-shadow: 0 0 10px white; }
 
 #down-arrow-row {
-  margin-top: 23%; }
+  margin-top: 225px; }
 
 .cyan-hover:hover {
   text-shadow: 0 0 10px #0097a7; }
